switch .properties config to .yml

--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,6 @@ target/
 *.iws
 *.iml
 *.ipr
-*.properties
 
 ### NetBeans ###
 /nbproject/private/
@@ -32,3 +31,7 @@ build/
 
 ### VS Code ###
 .vscode/
+
+
+### resources ###
+src/main/resources/application.yml
