--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,8 @@ target/
 *.iws
 *.iml
 *.ipr
+*.yml
+*.properties
 
 ### NetBeans ###
 /nbproject/private/
@@ -31,7 +33,3 @@ build/
 
 ### VS Code ###
 .vscode/
-
-
-### resources ###
-*.yml
